@@ -241,15 +241,13 @@ Description: Plasma Workspace for KF5
 Package: plasma-workspace-dev
 Architecture: any
 Section: libdevel
-Depends: kwin-common (>= 4:5.14),
-         libkf5itemmodels-dev (>= 5.37.0~),
+Depends: libkf5itemmodels-dev (>= 5.37.0~),
          libkf5plasma-dev (>= 5.50.0~),
          libkf5sysguard-dev (>= 4:5.14),
          libkf5windowsystem-dev (>= 5.4.0),
-         plasma-workspace (= ${binary:Version}),
          qtbase5-dev (>= 5.11.0~),
          qtdeclarative5-dev (>= 5.11.0~),
-         ${allLibraries},
+         ${so:Depends},
          ${misc:Depends},
 Breaks: kde-workspace-dev
 Replaces: kde-workspace-dev
